<resources>
    <string name="app_name">Traffic Sign Detection</string>
    <string name="copyright2">Model converted and deployed by Tencent/NCNN.</string>
    <string name="gps_not_found_message">This app requires GPS or Location Service.\n\nWould you like to enable Location Service now?\n</string>
    <string name="gps_not_found_title">GPS Not Enabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_settings">Settings</string>
    <string name="enable_location">Please enable Location-based service / GPS</string>

    <!-- Preference Titles -->
    <string name="app_header">Application</string>
    <string name="model_header">Model</string>

    <!-- App Preferences -->
    <string name="detection_title">Show detection boxes</string>
    <string name="detection_summery_on">Detection boxes will be drawn</string>
    <string name="detection_summery_off">Detection boxes will not be drawn</string>
    <string name="metrics_title">Show inference metrics</string>
    <string name="metrics_summery_on">Model inference metrics will be drawn</string>
    <string name="metrics_summery_off">Model inference metrics will not be drawn</string>
    <string name="default_speed_limit">Default Speed Limit</string>
    <string name="detection_model">Select Detection model</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="threshold">Threshold</string>
    <string name="nms_threshold">NMS threshold</string>
    <string name="k_min_hits">Min hits</string>
    <string name="kmph">Kmph</string>
    <string name="you_re_going_too_fast">You\'re going too fast!</string>
    <string name="_50">50</string>
    <string name="speed_limit">Speed Limit</string>
    <string name="camera_view">Camera view</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="speed_view">Speed view</string>
    <string name="_100">100</string>
    <string name="thresh_x_xx_nms_x_xx">Thresh:x.xx,NMS:x.xx</string>
    <string name="_000x000_fps_x_xxx">000x000 FPS:x.xxx</string>
    <string name="km_h">Km/h</string>
    <string name="sign">Sign</string>
</resources>
